--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form1</title>
+    <title>Form2_ Sign in</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="normalize.css" />
     <link
@@ -12,49 +12,50 @@
     />
   </head>
   <body>
-    <main>
-      <header>
-        <h1>Contact</h1>
-        <p>
-          For new business ideas, comments or anything you would lke to discuss
-          please contact with me!
-        </p>
-      </header>
-      <div class="container">
-        <form action="" method="get">
-          <div class="form">
+    <div class="form">
+      <div class="sign_form">
+        <ul>
+          <li><a href="#join">Sign in</a></li>
+          <li><a href="#sign">Join</a></li>
+        </ul>
+        <div class="form_body">
+          <div class="form-field">
+            <label for="username">Username</label>
             <input
+              class="input_error"
               type="text"
-              name="name"
-              placeholder="John Smith"
-              width="500"
-              height="50"
+              name="username"
+              minlength="3"
             />
-            <input type="email" name="mail" placeholder="Your mail" />
-            <input type="tel" name="number" placeholder="Your phone number.." />
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-              placeholder="Your message"
-            ></textarea>
+            <div class="form-error">error</div>
           </div>
-        </form>
-        <div class="cont_info">
-          <h3>ADDRESS</h3>
-          <p>123 Borneo str, San-Florida, USA</p>
-          <h3>EMAIL</h3>
-          <p>bestbus@gmail.com</p>
-          <h3>PHONE</h3>
-          <p>+18254565879</p>
+          <div class="form-field">
+            <label for="password">Password</label>
+            <input
+              class="input_error"
+              type="text"
+              name="password"
+              minlength="3"
+            />
+            <div class="form-error">error</div>
+          </div>
+          <div class="keep">
+            <input type="checkbox" checked name="keep" />
+            <label for="keep">Keep me signed in</label>
+          </div>
+          <button type="submit">Sign in</button>
         </div>
       </div>
-    </main>
-    <footer>
-      <div class="company_rights">2015, All copmany rights reserved</div>
-      <div class="logo">Cahee</div>
-      <div class="producer">Made with <span>Love </span> by Aukeeze</div>
-    </footer>
+      <div class="add_info">
+        <ul>
+          <li>
+            <a href="#"><span>Forgot password?</span></a>
+          </li>
+          <li>
+            <a href="#"><span>Create an account</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
